# importlens

./: .gitignore  ARCHITECTURE.md  DESIGN_SPEC.md  ENGINEERING_DECISIONS.md  KNOWN_LIMITATIONS.md  PHASE6_VALIDATION_NOTE.md  PHASE7_HARDENING_NOTE.md  PRODUCT_BRIEF.md  README.md  REAL_REPO_HARDENING.md  pyproject.toml
.github/workflows/: ci.yml  tests.yml
src/importlens/: __init__.py  cli.py  config.py  contract.py  graph.py  models.py  report.py  runtime.py  static.py
tests/: __init__.py  conftest.py  test_combined_report.py  test_contract.py  test_fixture_layout.py  test_hardening.py  test_profile_runtime.py  test_repo_structure.py  test_static_analysis.py
tests/fixtures/circular_chain/pkg/: __init__.py  a.py  b.py  c.py
tests/fixtures/optional_dynamic/pkg/: __init__.py  loader.py
tests/fixtures/optional_dynamic/pkg/backends/: __init__.py  default_backend.py
tests/fixtures/relative_imports/pkg/: __init__.py  constants.py  service.py
tests/fixtures/relative_imports/pkg/subpkg/: __init__.py  helpers.py
tests/fixtures/simple_linear/pkg/: __init__.py  alpha.py  beta.py
tests/fixtures/slow_side_effect/: app.py
tests/fixtures/slow_side_effect/pkg/: __init__.py  entrypoint.py  slow_module.py
tests/snapshots/: circular_chain_cycles.json  optional_dynamic_graph.json  relative_imports_graph.json  simple_linear_graph.json  slow_side_effect_importtime.txt
